Add a comment about a return value of IDBKey::toV8() https://bugs.webkit.org/show_bug.cgi?id=101212

Reviewed by Adam Barth.

Although all other toV8(impl) return null when impl is 0,
IDBKey::toV8(impl) is expected to return undefined when impl is 0.
This patch adds a comment about it.

No tests.

* bindings/js/JSIDBKeyCustom.cpp:
(WebCore::toJS):
* bindings/v8/custom/V8IDBKeyCustom.cpp:
(WebCore::toV8):


Canonical link: https://commits.webkit.org/119308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133483 268f45cc-cd09-0410-ab3c-d52691b4dbfc